2002-05-07  Michael Natterer  <mitch@gimp.org>

	* configure.in: added a new conditional CROSS_COMPILING which
	indicates ($build != $host). If it is set, look for
	glib-genmarshal in PATH. Error out if it was not found.

Tue May  7 11:24:22 2002  Owen Taylor  <otaylor@redhat.com>

	Fixes for #79347, Ron Arts.

	* glib/gqsort.c (g_qsort_with_data): Handle 0 elements,
	don't g_return_if_fail().

	* tests/qsort-test.c (main): Add a 0 element test.

	* glib/garray.c (g_[ptr_]array_sort_with[_data]): 
	Remove invalid assertions that array->pdata != NULL ..
	it's NULL for 0 elements which is a valid case.

Mon May  6 16:00:41 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gbacktrace.h: Exclude OSF from alpha definition
	of G_BREAKPOINT(), since the assembler apparently
	doesn't support bpt. (#77852, Gareth Pierce) [from stable]

Mon May  6 11:48:08 2002  Owen Taylor  <otaylor@redhat.com>

	[ merged from stable ]
 
 	* Makefile.am (EXTRA_DIST): Add ChangeLog.pre-2-0 (#78641)
 
 	* m4macros/glib-2.0.m4: save CFLAGS/LIBS properly when
 	compiling "what went wrong" test case. (#79330)
 
 	* m4macros/glib-2.0.m4: Remove reference to editing
 	pkg-config script. (From Jim Gettys)
 
 	* configure.in: (Look for dyld interfaces before dlopen()
 	since OS X can have both. Patch from Jacob Berkman, 
 	#80438)
	
2002-05-01  jacob berkman  <jacob@ximian.com>

	* configure.in: fix typo on 64-bit printf formatting string
	configure message (fixes #80389)

2002-04-29  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-04-19  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn.c (g_spawn_command_line_sync): Add Windows-specific
	note to the gtk-doc comment.

	* glib/gspawn-win32.c: Remove the copy-pasted gtk-doc comment
	blocks. It's enough to have them in gspawn.c.

2002-04-18  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gthread/gthread-impl.c (g_thread_init): Fixed typo. (#78985)

2002-04-13  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
